--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grunto",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "description": "grunto",
   "main": "index.js",
   "scripts": {
@@ -24,8 +24,7 @@
     "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.11.0",
     "@rollup/plugin-babel": "^5.2.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.9.0",
+    "eslint-config-wgl-main": "github:whiteGloom/eslint-config-wgl-main",
     "grunt": "^1.2.1",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-stylus": "^1.2.0",
