--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grunto",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "grunto",
   "main": "index.js",
   "scripts": {
@@ -19,19 +19,15 @@
     "url": "https://github.com/whiteGloom/grunto/issues"
   },
   "homepage": "https://github.com/whiteGloom/grunto#readme",
+  "contributors": [
+    "whiteGloom <karabin.m@yandex.ru> (https://github.com/whiteGloom)"
+  ],
   "devDependencies": {
-    "@babel/core": "^7.11.1",
-    "@babel/node": "^7.10.5",
-    "@babel/preset-env": "^7.11.0",
-    "@rollup/plugin-babel": "^5.2.0",
     "eslint-config-wgl-main": "github:whiteGloom/eslint-config-wgl-main",
-    "grunt": "^1.2.1",
+    "grunt": "^1.3.0",
     "grunt-concurrent": "^3.0.0",
     "grunt-contrib-clean": "^2.0.0",
-    "grunt-contrib-stylus": "^1.2.0",
     "grunt-contrib-watch": "^1.1.0",
-    "grunt-eslint": "^23.0.0",
-    "grunt-rollup": "^11.3.0",
-    "jasmine": "^3.6.1"
+    "eslint": "^7.11.0"
   }
 }
